--- a/fetal_health Alfetalai/flask/templates/about.html
+++ b/fetal_health Alfetalai/flask/templates/about.html
@@ -124,7 +124,7 @@
             </div>
             <div class="col-md-4">
               <h4>Contact Us</h4>
-              <p class="footer-text">120 Chittoor road, Chittoor, India</p>
+              <p class="footer-text">120 Chittoor road, Chittoor,Andhara Pradesh India</p>
               <p class="footer-text">irfanansaristm2000@gmail.com</p>
             </div>
           </div>
